<resources>
    <string name="app_name">LLUJU</string>
    <string name="google_map_key">AIzaSyAGMcGvTbVrjaMJo7H6-J8CVxzCn25r6eg</string>
    <string name="conekta_key">key_HjSd7XrwqArrXracHhzXabQ</string>
    <string name="logintitle">登录</string>
    <string name="registered">注册</string>
    <string name="Registered">注册</string>
    <string name="phoneNumber">手机号</string>
    <string name="password">密码</string>
    <string name="forgetpassword">忘记密码? </string>
    <string name="login">登录</string>
    <string name="userAgreement">登录及代表阅读并同意</string>
    <string name="Agreement">用户协议</string>
    <string name="codes">验证码</string>
    <string name="sendYzCode">验证码</string>
    <string name="mailbox">邮箱</string>
    <string name="Sharecode">分享码</string>
    <string name="registeredTop">带</string>
    <string name="registeredTops">为必填</string>
    <string name="nearbyList">附近商家清单</string>
    <string name="scanRent">扫码租借</string>
    <string name="shareCode">我的分享码</string>
    <string name="feedback">问题或意见反馈</string>
    <string name="aboutUs">关于我们</string>
    <string name="userAgreements">用户协议</string>
    <string name="privacyAgreement">隐私协议</string>
    <string name="balance">账户余额</string>
    <string name="View">查看</string>
    <string name="logOut">退出</string>
    <string name="rentalRecords">租借记录</string>
    <string name="cooperation">商家合作</string>
    <string name="useTutorial">使用教程</string>
    <string name="helpCenter">常见问题</string>
    <string name="nearbyOutlets">附近商家</string>
    <string name="shopDetail">商家详情</string>
    <string name="retrievePassword">找回密码</string>
    <string name="determine">提交</string>
    <string name="openingHours">营业时间:</string>
    <string name="address">地址:</string>
    <string name="phone">电话:</string>
    <string name="merchantDescription">商家描述:</string>
    <string name="positioningFailed">定位失败</string>
    <string name="rules">收费规则</string>
    <string name="billingRules">计费规则:</string>
    <string name="rentImmediately">同意并立即租借</string>
    <string name="leaseFailed">租借失败</string>
    <string name="treasurfailed">充电宝弹出失败</string>
    <string name="nearbyBusinesses">附近商家</string>
    <string name="customerService">联络客服</string>
    <string name="Tips">温馨提示</string>
    <string name="phones">客服热线:</string>
    <string name="workingHours">工作时间:</string>
    <string name="call">通话</string>
    <string name="personalInformation">个人信息</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="PhoneNumber">手机号码</string>
    <string name="Email">邮箱</string>
    <string name="takePicture">拍照</string>
    <string name="album">从相册选择</string>
    <string name="nicknameTip">请输入昵称</string>
    <string name="nicknameTips">设置昵称后，朋友找你更方便。</string>
    <string name="Determine">提交</string>
    <string name="Eamils">请输入您的电子信箱</string>
    <string name="EamilsTip">请输入电子信箱</string>
    <string name="Bind">绑 定</string>
    <string name="Mypurse">我的钱包</string>
    <string name="details">交易明细</string>
    <string name="AccountBalance">账户余额</string>
    <string name="Recharge">充值</string>
    <string name="RechargeTip">余额充值不可提现</string>
    <string name="payTypeTip">请选择支付方式</string>
    <string name="payType">Visa / Master信用卡</string>
    <string name="total">合计:</string>
    <string name="Expenses">消费记录</string>
    <string name="selectTime">请选择时间</string>
    <string name="BillingDetails">账单详情</string>
    <string name="TopUpTobalance">充值到账</string>
    <string name="CurrentStatus">当前状态</string>
    <string name="RechargeTime">充值时间</string>
    <string name="paymentMethod">支付方式</string>
    <string name="cardNumber">卡号</string>
    <string name="TransactionNumber">交易单号</string>
    <string name="RentalConsumption">消费金额</string>
    <string name="RechargeSuccessful">充值成功</string>
    <string name="UseTutorial">使用说明</string>
    <string-array name="chinese_week_string_array">
        <item>day</item>
        <item>One</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>
        <item>fives</item>
        <item>six</item>
    </string-array>
    <string name="OrderStatus">订单状态</string>
    <string name="Returned">已归还</string>
    <string name="OrderNumber">订单号:</string>
    <string name="RentalTime">租借时间:</string>
    <string name="RentalBusiness">租借商家:</string>
    <string name="RentalTimes">归还时间:</string>
    <string name="LeaseDuration">租借时长:</string>
    <string name="Charges">收费标准:</string>
    <string name="FreeDuration">免费时长:</string>
    <string name="EquipmentType">设备类型:</string>
    <string name="ReturnBusiness">归还商家:</string>
    <string name="RentalAddress">租借地址:</string>
    <string name="ReturnAddress">归还地址:</string>
    <string name="RentalFees">租借费用:</string>
    <string name="LostPurchase">遗失购买</string>
    <string name="orderDetails">订单详情</string>
    <string name="LostTips">遗失购买说明</string>
    <string name="LostTip">租借过程中若充电宝遗失，可点击下方 \n 的遗失购买按钮,系统扣除充电宝的成 \n 本后会将剩余的押金
    退还至原来的账户</string>
    <string name="buy">购买</string>
    <string name="RentalRecords">租借记录</string>
    <string name="cooperationTip">愿与您合作共赢，共创未来无限可能</string>
    <string name="shopName">店铺名称</string>
    <string name="shopNameTip">请输入店铺名称</string>
    <string name="ContactPerson">联系人</string>
    <string name="ContactPersonTip">请输入联系人</string>
    <string name="phoneTle">电话</string>
    <string name="phoneTleTip">请输入电话号码</string>
    <string name="CooperativeContents">合作内容</string>
    <string name="CooperativeContentsTip">请输入您要合作的信息</string>
    <string name="MyShareCode">我的分享码</string>
    <string name="InvitationCode">我的邀请码</string>
    <string name="copy">复制</string>
    <string name="copayTip">复制邀请码,邀请更多好友加入我们，被分享者  使用分享码注册成功并充值第一笔账户余额，
    分享者 和被分享者可同时得到</string>
    <string name="copayTips">的奖励,这比金额 会增加到账户余额</string>
    <string name="downloadApp">扫码下载APP</string>
    <string name="DeviceID">设备编号</string>
    <string name="feedbackType">请选择反馈类型</string>
    <string name="aboutus">关于我们</string>
    <string name="CustomerHotline">客服热线</string>
    <string name="Emails">电子邮箱</string>
    <string name="CompanyWebsite">公司官网</string>
    <string name="currentVersion">当前版本</string>
    <string name="phoneNumberTip">请输入手机号码</string>
    <string name="eamilTip">请输入邮箱</string>
    <string name="VerificationCodeTip">请输入验证码</string>
    <string name="passwordTip">请输入密码</string>
    <string name="yourEmail">请输入邮箱</string>
    <string name="AreaCode">区号选择</string>
    <string name="resend">重新发送</string>
    <string name="contentTip">请填写合作内容</string>
    <string name="noData">暂无数据</string>
    <string name="possible">在此处输入您的问题，对不起，我们很抱歉，我们会尽快与您联系</string>
    <string name="noCamera">摄像头打开失败</string>
    <string name="acquisitionFailed">数据获取失败</string>
    <string name="noDeviceId">请输入设备编号</string>
    <string name="noCommonType">请选择问题类型</string>
    <string name="noEamil">请输入问题描述</string>
    <string name="mobileNumber">请输入手机号码</string>
    <string name="Time">公司网站</string>
    <string name="distances">distancia</string>
    <string name="versionNumber">当前版本</string>
    <string name="cancel">取消</string>
    <string name="loginOut">确定要登出吗?</string>
    <string name="Available">可借</string>
    <string name="Rrturn">可还</string>
    <string name="distance">嘻嘻嘻</string>
    <string name="noGoogleMap">您尚未安装谷歌地图</string>
    <string name="determines">确定</string>
    <string name="noDatas">没有生意 \n 附近，看看其他地方〜</string>
    <string name="CreditCard">信用卡</string>
    <string name="CardNumber">卡号</string>
    <string name="expirationDate">有效期</string>
    <string name="SecurityCode">安全码</string>
    <string name="creditCardDetails">信用卡详情</string>
    <string name="creditCardDetailsTip">要取消绑定信用卡，只需点击,页面右上角，并在必要时重新绑定。</string>
    <string name="AddCreditCard">添加信用卡</string>
    <string name="cardNumberTip">请输入卡号</string>
    <string name="validityTip">请输入有效期</string>
    <string name="validityTypeTip">有效期格式错误</string>
    <string name="securityTip">请输入安全码</string>
    <string name="Cardholder">持卡人姓名</string>
    <string name="expirationDateTip">有效期(MM/AAAA)</string>
    <string name="confirm">确认</string>
    <string name="confirms">确认</string>
    <string name="deleteTips">你确定你要删除信用卡？</string>
    <string name="cardholder">请输入持卡人姓名</string>
    <string name="noInternet">您设备未联网</string>
    <string name="nocard">暂未绑定信用卡</string>
    <string name="moenys">人民币</string>
    <string name="LeaseTip">您需要先绑定信用卡，然后才能租用。</string>
    <string name="paytype">请选择支付的银行卡</string>
    <string name="moneyId">请选择充值金额</string>
    <string name="payment">请选择付款方式</string>
    <string name="pwdTip">密码不能少于六位</string>
    <string name="failedTip">抱歉，您的余额无法充值</string>
    <string name="failedTips">如有疑问，请联系在线客服</string>
    <string name="CustomerService">客户服务</string>
    <string name="Rentalsuccess">租借成功</string>
    <string name="Succeeded">成功了</string>
    <string name="leaseTips">请取走编号</string>
    <string name="leaseTipss">电池，如有任何疑问，请联系客服</string>
    <string name="leaseTipsss">如有任何疑问，请联系客服</string>
    <string name="home">主页</string>
    <string name="Deposits">押金</string>
    <string name="FreeDurations">免费时间</string>
    <string name="perHour">每小时收费</string>
    <string name="dayCap">日上限</string>
    <string name="TotalCap">总上限</string>
    <string name="EndOrder">结算</string>
    <string name="RefundOfDeposit">自动退还押金</string>
    <string name="OFF">关</string>
    <string name="OPEN">开</string>
    <string name="withDraw">提现</string>
    <string name="withDrawTip">当前现金提取：SAR 100.00</string>
    <string name="withDrawalAmount">提现金额</string>
    <string name="withdrawAll">全部提取</string>
    <string name="withDrawTips">提款金额将退回到原始帐户，并记入3到5个工作日</string>
    <string name="withdraw">提现>></string>
    <string name="Deposit">押金:</string>
    <string name="language">语言选择</string>
    <string name="rent">租借中</string>
    <string name="revoked">已撤销</string>
    <string name="doubt">存疑</string>
    <string name="purchase">购买单</string>
    <string name="Failure">故障单</string>
    <string name="timeout">超时单</string>
    <string name="payed">已支付</string>
    <string name="otherCard">另一种卡</string>
    <string name="balanceTip">您目前的帐户余额为</string>
    <string name="balanceTips">，请先充值</string>
    <string name="depositsTip">您目前的帐户押金为</string>
    <string name="visa">visa信用卡</string>
    <string name="Maestro">Maestro信用卡</string>
    <string name="jcb">JCB信用卡</string>
    <string name="delectTip">向左滑动即可解除信用卡绑定。</string>
    <string name="ReturnTimes">归还时间:</string>
    <string name="leseTip">充值金额不能少于负债金额</string>
    <string name="scanTip">您已经租借了充电宝，请先归还充电宝</string>
    <string name="RefreshSuccessfully">刷新成功</string>
    <string name="RechargeDeposit">充值押金</string>
    <string name="RechargeBalance">充值余额</string>
    <string name="unpaid">未支付</string>
    <string name="PaymentFailed">支付失败</string>
    <string name="Request">请求中</string>
    <string name="successfullyDeleted">删除成功</string>
    <string name="January">1月</string>
    <string name="February">2月</string>
    <string name="March">3月</string>
    <string name="April">4月</string>
    <string name="May">5月</string>
    <string name="June">6月</string>
    <string name="July">7月</string>
    <string name="August">8月</string>
    <string name="September">9月</string>
    <string name="October">10月</string>
    <string name="November">11月</string>
    <string name="December">12月</string>
    <string name="mailboxs">邮箱</string>
    <string name="incorrect">邮箱格式不正确</string>
    <string name="OrderConsumption">Order Consumption</string>
    <string name="BackgroundChange">Background Change</string>
    <string name="WithdrawalBalance">Withdrawal Balance</string>
    <string name="WithdrawalDeposit">Withdrawal Deposit</string>
    <string name="DeductionBalance">Deduction balance</string>
    <string name="success">Success</string>
    <string name="paid">To be paid</string>
    <string name="WithdrawableDeposit">Withdrawable deposit:</string>
</resources>