<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CooperationActivity">
    <ScrollView
        android:id="@+id/sv"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <com.zheng.liuju.view.TitleView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/cooperation"/>
    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="134dp"
        />
    <TextView
        android:layout_marginTop="24dp"
        android:text="@string/cooperation"
        android:layout_marginLeft="33dp"
        android:textStyle="bold"
        android:textColor="#FF000000"
        android:textSize="@dimen/btnTextSiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:lineSpacingExtra="5dp"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="37dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cooperationTip"
        android:textSize="13sp"
        android:textColor="#FF000000"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#FFCCCCCC"
        android:layout_marginTop="13dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"/>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:layout_marginRight="27dp"
        android:background="@drawable/cooperation_bg">
<TextView
    android:textStyle="bold"
    android:layout_marginLeft="32dp"
    android:layout_marginTop="18dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/shopName"
    android:textColor="#FF1D1D1D"
    android:textSize="13sp"
    />
        <EditText
            android:id="@+id/shopName"
            android:singleLine="true"
            android:background="@null"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="32dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/shopNameTip"
            android:textColorHint="#FF595959"
            />
        <TextView
            android:textStyle="bold"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ContactPerson"
            android:textColor="#FF1D1D1D"
            android:textSize="13sp"
            />
        <EditText
            android:id="@+id/userName"
            android:singleLine="true"
            android:background="@null"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="32dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/ContactPersonTip"
            android:textColorHint="#FF595959"
            />
        <TextView
            android:textStyle="bold"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneTle"
            android:textColor="#FF1D1D1D"
            android:textSize="13sp"
            />
        <EditText
            android:id="@+id/userPhone"
            android:singleLine="true"
            android:background="@null"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="32dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/phoneTleTip"
            android:textColorHint="#FF595959"
            />
        <TextView
            android:textStyle="bold"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CooperativeContents"
            android:textColor="#FF1D1D1D"
            android:textSize="13sp"
            />
        <EditText
            android:id="@+id/content"
            android:layout_marginBottom="14dp"
            android:maxLines="2"
            android:background="@null"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="32dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/CooperativeContentsTip"
            android:textColorHint="#FF595959"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.gigamole.library.ShadowLayout
            android:layout_alignParentBottom="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="18dp"
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:sl_shadowed="true"
            app:sl_shadow_angle="45"
            app:sl_shadow_radius="5dp"
            app:sl_shadow_distance="3dp"
            app:sl_shadow_color="#6093C15F"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            >
            <TextView
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/determine"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/login_buttons"
                android:textSize="@dimen/btnTextSiz"/>
        </com.gigamole.library.ShadowLayout>
    </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <com.zheng.liuju.view.DragImageView
        android:id="@+id/home"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/home"/>
</RelativeLayout>