<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BillingDetailsActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <com.zheng.liuju.view.TitleView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:titleText="@string/BillingDetails"/>
<LinearLayout
    android:layout_marginTop="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background=" #fbfbfb">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="9dp"
        android:layout_margin="15dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tobalance"
        android:layout_marginTop="37dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TopUpTobalance"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/moeny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:textColor="@color/loginbak"
        android:layout_gravity="center_horizontal"/>
    <View
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#D9D9D9"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="16dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="#B5B5B5"
            android:layout_height="wrap_content"
            android:text="@string/CurrentStatus"/>
        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="#333333"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="16dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="#B5B5B5"
            android:layout_height="wrap_content"
            android:text="@string/RechargeTime"/>
        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            android:textColor="#333333"/>
    </LinearLayout>
    <LinearLayout
    android:layout_marginTop="25dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_marginLeft="16dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textColor="#B5B5B5"
        android:layout_height="wrap_content"
        android:text="@string/paymentMethod"/>
    <TextView
        android:id="@+id/paymentMethod"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"

        android:textColor="#333333"/>
</LinearLayout>
    <LinearLayout
        android:id="@+id/cardName"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView

            android:layout_marginLeft="16dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="#B5B5B5"
            android:layout_height="wrap_content"
            android:text="@string/cardNumber"/>
        <TextView
            android:id="@+id/cardNumber"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            android:textColor="#333333"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="21dp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="16dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="#B5B5B5"
            android:layout_height="wrap_content"
            android:text="@string/TransactionNumber"/>
        <TextView
            android:id="@+id/TransactionNumber"
            android:layout_width="0dp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="#333333"/>
    </LinearLayout>
</LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
    </LinearLayout>

    <com.zheng.liuju.view.DragImageView
        android:id="@+id/home"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/home"/>
</RelativeLayout>