<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.FeedBackActivity">
    <ScrollView
        android:id="@+id/sv"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <com.zheng.liuju.view.TitleView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/feedback"
        ></com.zheng.liuju.view.TitleView>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@drawable/feed_bg"
    android:layout_marginTop="10dp"
    android:layout_marginRight="19dp"
    android:layout_marginLeft="19dp">
  <EditText
      android:id="@+id/deviceID"
      android:layout_marginLeft="12dp"
      android:layout_width="250dp"
      android:textSize="15sp"
      android:textColor="#0E0E10"
      android:hint="@string/DeviceID"
      android:layout_height="match_parent"
      android:background="@null"/>
    <ImageView
        android:id="@+id/scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="12dp"
        android:src="@mipmap/scancode"/>
</RelativeLayout>
    <TextView
        android:layout_marginLeft="19dp"
        android:textSize="16sp"
        android:textColor="#0E0E10"
        android:layout_marginTop="15dp"
        android:text="@string/feedbackType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.zheng.liuju.view.MyGridView

        android:id="@+id/gv"
        android:numColumns="2"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.zheng.liuju.view.MyGridView>
    <TextView
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneTleTip"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="19dp"
        android:textColor="#0E0E10"/>
    <EditText
        android:id="@+id/phone"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="17dp"
        android:layout_marginRight="19dp"
        android:background="@drawable/feed_bg"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/mobileNumber"
        android:textSize="15sp"
        android:paddingLeft="12dp"
        />
    <EditText
        android:id="@+id/content"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="13dp"
        android:layout_marginRight="19dp"
        android:background="@drawable/feed_bg"
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:hint="@string/possible"
        android:gravity="left"
        android:paddingTop="5dp"
        android:textSize="15sp"
        android:paddingLeft="12dp"
        />
    <GridView
        android:layout_marginTop="20dp"
        android:id="@+id/noScrollgridview"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:fastScrollEnabled="true"
        android:layout_marginLeft="10dp"
        android:focusable="true"
        android:gravity="center"
        android:horizontalSpacing="0dp"
        android:scrollbars="none"
        android:scrollingCache="false"
        android:stretchMode="spacingWidthUniform"
        android:verticalSpacing="1dp"></GridView>
</LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.gigamole.library.ShadowLayout
                android:layout_marginTop="12dp"
                android:layout_marginBottom="18dp"
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:sl_shadowed="true"
                app:sl_shadow_angle="45"
                app:sl_shadow_radius="5dp"
                app:sl_shadow_distance="3dp"
                app:sl_shadow_color="@color/loginbakbutton"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                >
                <TextView
                    android:layout_centerInParent="true"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/determine"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/login_buttons"
                    android:textSize="@dimen/btnTextSiz"/>
            </com.gigamole.library.ShadowLayout>
        </LinearLayout>
    </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <com.zheng.liuju.view.DragImageView
        android:id="@+id/home"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/home"/>
</RelativeLayout>