<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TransactionDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <com.zheng.liuju.view.TitleView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/details"
        ></com.zheng.liuju.view.TitleView>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView

            android:id="@+id/recharge"
            android:layout_marginTop="5dp"
            android:layout_width="150dp"
            android:layout_height="46dp"
            android:background="@drawable/red_recharge_bg"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:text="@string/Recharge"/>
        <TextView
            android:layout_marginLeft="30dp"
            android:id="@+id/expenses"
            android:layout_marginTop="5dp"
            android:layout_width="150dp"
            android:layout_height="46dp"
            android:background="@drawable/white_recharge_bg"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#868686"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:text="@string/Expenses">
        </TextView>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fl"
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>
</LinearLayout>

    <com.zheng.liuju.view.DragImageView
        android:id="@+id/home"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/home"/>
</RelativeLayout>